--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,3 +15,8 @@ spring:
   redis:
     host: localhost
     port: 6379
+
+client:
+  search-trend:
+    google:
+      daily-trends-url: https://trends.google.co.kr
